Amended JRA wind perturbation setup notebook

--- a/notebooks/forcing_perturbation/JRA_wind_perturbation_setup.ipynb
+++ b/notebooks/forcing_perturbation/JRA_wind_perturbation_setup.ipynb
@@ -436,10 +436,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# to ensure metadata etc is correct, copy old files and overwrite data:\n",
+    "'''# to ensure metadata etc is correct, copy old files and overwrite data:\n",
     "\n",
     "# original files:\n",
     "#u_file = '/g/data/x77/amh157/JRA55-do/RYF/v1-3/RYF.u_10.1990_1991.nc'\n",
@@ -494,7 +496,7 @@
     "ncFile.close()\n",
     "ncFile = nc.Dataset(new_v_file,'r+')\n",
     "ncFile.variables['vas_10m'][...] = v_decreased.values\n",
-    "ncFile.close()"
+    "ncFile.close()'''"
    ]
   },
   {
