--- a/notebooks/figures/Figure-1.ipynb
+++ b/notebooks/figures/Figure-1.ipynb
@@ -62,7 +62,7 @@
     "import matplotlib.ticker as mticker\n",
     "import numpy as np\n",
     "import xarray as xr\n",
-    "from cartopy.mpl.ticker import LongitudeFormatter, LatitudeFormatter\\\n",
+    "from cartopy.mpl.ticker import LongitudeFormatter, LatitudeFormatter\n",
     "from cartopy.util import add_cyclic_point\n",
     "\n",
     "import warnings # ignore these warnings\n",
