--- a/notebooks/Ekman_pumping/Ekman_rho_part2.ipynb
+++ b/notebooks/Ekman_pumping/Ekman_rho_part2.ipynb
@@ -3267,7 +3267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "c9e7cccf-76d0-4487-984f-2b2aedadd3a6",
    "metadata": {},
    "outputs": [
@@ -3276,22 +3276,28 @@
      "output_type": "stream",
      "text": [
       "<xarray.DataArray 'Ekman pumping in isopycnal bins summed over time' (xt_ocean: 10)>\n",
-      "array([2.38057375, 2.08824958, 1.50284086, 1.11068751, 0.96308669,\n",
-      "       0.70992245, 0.76424682, 1.30167684, 1.80664789, 2.20109552])\n",
+      "array([1.54574053, 1.02367186, 0.52817764, 0.2122567 , 0.59601218,\n",
+      "       1.39448345, 2.04799893, 2.20985757, 1.9212026 , 1.57125399])\n",
       "Coordinates:\n",
-      "    year      int64 2159\n",
+      "    year      int64 2155\n",
       "    yt_ocean  float64 -64.2\n",
-      "  * xt_ocean  (xt_ocean) float64 -239.9 -239.8 -239.7 ... -239.2 -239.1 -239.0 [0.47611475 0.41764992 0.30056817 0.2221375  0.19261734 0.14198449\n",
-      " 0.15284936 0.26033537 0.36132958 0.4402191 ]\n"
+      "  * xt_ocean  (xt_ocean) float64 -239.9 -239.8 -239.7 ... -239.2 -239.1 -239.0 <xarray.DataArray 'Ekman pumping in isopycnal bins summed over time' (xt_ocean: 10)>\n",
+      "array([0.30914811, 0.20473437, 0.10563553, 0.04245134, 0.11920244,\n",
+      "       0.27889669, 0.40959979, 0.44197151, 0.38424052, 0.3142508 ])\n",
+      "Coordinates:\n",
+      "    year      int64 2155\n",
+      "    yt_ocean  float64 -64.2\n",
+      "  * xt_ocean  (xt_ocean) float64 -239.9 -239.8 -239.7 ... -239.2 -239.1 -239.0 [0.30914811 0.20473437 0.10563553 0.04245134 0.11920244 0.27889669\n",
+      " 0.40959979 0.44197151 0.38424052 0.3142508 ]\n"
      ]
     }
    ],
    "source": [
     "#why off by factor of 10? ...its off by the isopycnal bin depth\n",
-    "tmp1=ekman_sigma0.isel(year=4).sum(dim='isopycnal_bins')\n",
-    "tmp2=ekman.isel(time=slice(48, 60))\n",
+    "tmp1=ekman_sigma0.isel(year=0).sum(dim='isopycnal_bins')\n",
+    "tmp2=ekman.isel(time=slice(0, 12))\n",
     "tmp2=tmp2.sum(dim='time')/sum(n_days_array[0:12])\n",
-    "print(tmp1[400,400:410],tmp2[400,400:410].values)"
+    "print(tmp1[400,400:410],tmp1[400,400:410]*.2,tmp2[400,400:410].values)"
    ]
   },
   {
