Adding Figure 6 notebook

--- a/notebooks/figures/Figure-6.ipynb
+++ b/notebooks/figures/Figure-6.ipynb
@@ -4,13 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Heat and FW Fluxes\n",
+    "# Heat and FW Buoyancy Fluxes\n",
     "\n",
-    "This file makes a figure for the paper to showcase heat and FW fluxes in the Easterlies experiment. In particular, we focus on the net FW fluxes from ice melting, which we show is the main control on DSW formation.\n",
+    "This file makes Figure 6 for the paper - deisgned to show that buoyancy fluxes over the Antarctic continenta shelf in the Easterlies experiment is dominaed by freshwater fluxes.\n",
     "\n",
-    "The simulations run from '2150-01-01' to '2164-12-31'\n",
-    "\n",
-    "**This is pretty messy -- superceded by figures/Figure-6.ipynb**"
+    "To do this, we calculate the climatology of the fluxes over years 5-10 of the control, up and down experiments (noting that the annual cycle of buo"
    ]
   },
   {
