Just in case I loose everything again

--- a/notebooks/moc/MOC.ipynb
+++ b/notebooks/moc/MOC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "1ef07db7-9d56-41d9-a1e1-cc7a4d319c9e",
    "metadata": {
     "tags": []
@@ -16,8 +16,8 @@
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3 style=\"text-align: left;\">Client</h3>\n",
        "<ul style=\"text-align: left; list-style: none; margin: 0; padding: 0;\">\n",
-       "  <li><b>Scheduler: </b>tcp://127.0.0.1:41835</li>\n",
-       "  <li><b>Dashboard: </b><a href='/proxy/46643/status' target='_blank'>/proxy/46643/status</a></li>\n",
+       "  <li><b>Scheduler: </b>tcp://127.0.0.1:40863</li>\n",
+       "  <li><b>Dashboard: </b><a href='/proxy/8787/status' target='_blank'>/proxy/8787/status</a></li>\n",
        "</ul>\n",
        "</td>\n",
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
@@ -32,10 +32,10 @@
        "</table>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:41835' processes=8 threads=48, memory=188.57 GiB>"
+       "<Client: 'tcp://127.0.0.1:40863' processes=8 threads=48, memory=188.57 GiB>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "id": "ca7197ac-6a62-4128-b78f-f18465f44981",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "id": "a7962087-c9bd-4c92-a967-b5c8e2b8b128",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "id": "6ea85164-747c-4f85-a02c-ed76d7fa87ef",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,13 @@
    "cell_type": "code",
    "execution_count": 86,
    "id": "f97dbb51-5bd1-4e05-86ca-457da0d593c4",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -185,7 +191,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2af150e1-f3fd-4f28-9eb9-74d4867675fe",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "for k in ['up', 'down']:\n",
@@ -207,6 +215,55 @@
     "    plt.title('Overturning in '+k);\n",
     "    plt.savefig(figdir+'overturning_anom_'+k+'.jpg', bbox_inches = 'tight')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "81db39cc-0e45-49b7-a89f-b365363fc996",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psi_overturning = {}\n",
+    "for k in ['ctrl', 'up', 'down']:\n",
+    "    psi_overturning[k] = psi[k].cumsum('potrho') - psi[k].sum('potrho')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3deeb16b-29c1-4341-99be-77de5e6ad9e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_transport = {}\n",
+    "for k in ['ctrl', 'up', 'down']:\n",
+    "    max_transport[k] = -psi_overturning[k].sel(grid_yu_ocean = -55, method = 'nearest').min('potrho')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e35eaccf-32e3-483e-a3fe-e1cc146c2325",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize = (15, 5))\n",
+    "plt.plot(max_transport['up']['time'], max_transport['up'], color = 'r', label = 'UP')\n",
+    "plt.plot(max_transport['down']['time'], max_transport['down'], color = 'b', label = 'DOWN')\n",
+    "plt.plot(max_transport['ctrl']['time'], max_transport['ctrl'], color = 'k', label = 'CONTROL')\n",
+    "plt.legend(ncol = 3, loc = 'upper center')\n",
+    "plt.grid(linestyle = '--', color = 'lightgrey')\n",
+    "plt.xlabel('Years')\n",
+    "plt.ylabel('Overturning transport [Sv]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2aa31ba-eba1-418f-b0e6-3f2172243993",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
