--- a/notebooks/cmip6/CMIP6-historical-along_slope_wind.ipynb
+++ b/notebooks/cmip6/CMIP6-historical-along_slope_wind.ipynb
@@ -128,9 +128,7 @@
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -230,7 +228,8 @@
    "metadata": {
     "jupyter": {
      "source_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -377,9 +376,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -684,9 +681,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:analysis3-21.01] *",
+   "display_name": "Python [conda env:analysis3-21.04]",
    "language": "python",
-   "name": "conda-env-analysis3-21.01-py"
+   "name": "conda-env-analysis3-21.04-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -698,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
