--- a/notebooks/cmip6/CMIP6-historical-trends_biases.ipynb
+++ b/notebooks/cmip6/CMIP6-historical-trends_biases.ipynb
@@ -77,9 +77,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
