--- a/notebooks/forcing_perturbation/JRA-forcing-anomalies.ipynb
+++ b/notebooks/forcing_perturbation/JRA-forcing-anomalies.ipynb
@@ -272,7 +272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:analysis3-21.01] *",
+   "display_name": "Python [conda env:analysis3-21.01]",
    "language": "python",
    "name": "conda-env-analysis3-21.01-py"
   },
