--- a/notebooks/figures/Figure-10.ipynb
+++ b/notebooks/figures/Figure-10.ipynb
@@ -48,7 +48,7 @@
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3 style=\"text-align: left;\">Client</h3>\n",
        "<ul style=\"text-align: left; list-style: none; margin: 0; padding: 0;\">\n",
-       "  <li><b>Scheduler: </b>tcp://127.0.0.1:45699</li>\n",
+       "  <li><b>Scheduler: </b>tcp://127.0.0.1:44619</li>\n",
        "  <li><b>Dashboard: </b><a href='/proxy/8787/status' target='_blank'>/proxy/8787/status</a></li>\n",
        "</ul>\n",
        "</td>\n",
@@ -64,7 +64,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:45699' processes=4 threads=16, memory=44.92 GiB>"
+       "<Client: 'tcp://127.0.0.1:44619' processes=4 threads=16, memory=44.92 GiB>"
       ]
      },
      "execution_count": 2,
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,18 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# select out bottom values:\n",
-    "depth_array = temp_con * 0 + age_con.st_ocean\n",
+    "depth_array = temp_con * 0 + temp_con.st_ocean\n",
     "max_depth   = depth_array.max(dim = 'st_ocean', skipna= True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -314,7 +314,7 @@
    "source": [
     "fig = plt.figure(figsize=(15, 15))\n",
     "# Panel title\n",
-    "title_name = ['WIND+', 'WIND-', 'WIND+zonal', 'WIND+merid']\n",
+    "title_name = ['WIND+', 'WIND+$_zonal$', 'WIND+$_merid$', 'WIND-']\n",
     "# Subplots grid\n",
     "gs  = gridspec.GridSpec(4, 2, height_ratios=[1, 1, 1, 1], width_ratios=[1, 0.025], wspace=0.05)\n",
     "\n",
@@ -335,11 +335,11 @@
     "        plot_land()\n",
     "        cf = ax.pcolormesh(bottom_temp_con.xt_ocean, bottom_temp_con.yt_ocean, (bottom_temp_up-bottom_temp_con), cmap=cmocean.balance, vmin=-0.3, vmax=0.3) \n",
     "    elif ii == 1:\n",
-    "        # Temp, WIND-\n",
+    "        # Temp, WIND+meridional\n",
     "        ax = fig.add_subplot(gs[ii+1])\n",
     "        ax.set_title(title_name[ii])\n",
     "        plot_land()\n",
-    "        cf = ax.pcolormesh(bottom_temp_con.xt_ocean, bottom_temp_con.yt_ocean, (bottom_temp_down-bottom_temp_con), cmap=cmocean.balance, vmin=-0.3, vmax=0.3) \n",
+    "        cf = ax.pcolormesh(bottom_temp_con.xt_ocean, bottom_temp_con.yt_ocean, (bottom_temp_up_mer-bottom_temp_con), cmap=cmocean.balance, vmin=-0.3, vmax=0.3) \n",
     "    elif ii == 2:\n",
     "        # Temp, WIND+zonal\n",
     "        ax = fig.add_subplot(gs[ii+2])\n",
@@ -347,11 +347,11 @@
     "        plot_land()\n",
     "        cf = ax.pcolormesh(bottom_temp_con.xt_ocean, bottom_temp_con.yt_ocean, (bottom_temp_up_zon-bottom_temp_con), cmap=cmocean.balance, vmin=-0.3, vmax=0.3) \n",
     "    elif ii == 3:\n",
-    "        # Temp, WIND+meridional\n",
+    "        # Temp, WIND-\n",
     "        ax = fig.add_subplot(gs[ii+3])\n",
     "        ax.set_title(title_name[ii])\n",
     "        plot_land()\n",
-    "        cf = ax.pcolormesh(bottom_temp_con.xt_ocean, bottom_temp_con.yt_ocean, (bottom_temp_up_mer-bottom_temp_con), cmap=cmocean.balance, vmin=-0.3, vmax=0.3) \n",
+    "        cf = ax.pcolormesh(bottom_temp_con.xt_ocean, bottom_temp_con.yt_ocean, (bottom_temp_down-bottom_temp_con), cmap=cmocean.balance, vmin=-0.3, vmax=0.3) \n",
     "        plt.xlabel('Longitude ($^{\\circ}$E)')\n",
     "    plt.ylabel('Latitude ($^{\\circ}$N)')\n",
     "    if ii < 3:\n",
@@ -364,9 +364,9 @@
     "cbar.set_label('Bottom temperature anomaly (yr)')\n",
     "\n",
     "# Finished\n",
-    "save_fig = 1\n",
+    "save_fig = 0\n",
     "if save_fig == 1:\n",
-    "    fig_name = 'Figure-10.png'#'Fig9_Temp_anomaly.png'\n",
+    "    fig_name = 'Figure10.png'#'Fig9_Temp_anomaly.png'\n",
     "    plt.savefig(fig_path + fig_name)"
    ]
   },
